# Mini-SIGAA

./: Aluno.hs  Disciplina.hs  Main.hs  Mini-SIGAA.cabal  Professor.hs  README.md  Sistema.hs
Models/: Aluno.hs  Professor.hs
Utils/: Database.hs
src/: Aluno.hs  Disciplina.hs  Main.hs  Professor.hs  Sistema.hs
src/Models/: Aluno.hs  Disciplina.hs  Professor.hs  Turma.hs
src/Utils/: Database.hs
